--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?createDatabaseIfNotE
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 spring.jpa.hibernate.ddl-auto=update
+
+encryption.salt.rounds=10
+
