--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 encryption.salt.rounds=10
 
+jwt.algorithm.key=SuperSecureSecretKey
+jwt.issuser=ecommerce
+jwt.expiery=604800
