email verfication service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 spring.application.name=Ecommerce
+
+#DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?createDatabaseIfNotExist=true
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 spring.jpa.hibernate.ddl-auto=update
 
+#Encryption
 encryption.salt.rounds=10
 
+#JWT
 jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuser=ecommerce
 jwt.expiery=604800
+
+#Email Verfication
+email.from=salma1soliman00@gmail.com
